[gd_scene load_steps=8 format=2]

[ext_resource path="res://Environment/Base/viaduct1.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Environment/Base/viaduct1.gd" type="Script" id=2]
[ext_resource path="res://Environment/Base/door.wav" type="AudioStream" id=3]
[ext_resource path="res://Environment/Base/airlock_woosh.wav" type="AudioStream" id=4]



[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.59744, 1, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.81394, 1, 0.1795 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.428894, 1.21887, 0.791306 )

[node name="viaduct1" type="MeshInstance"]
transform = Transform( -0.637349, 0, -5.57188e-08, 0, 0.637349, 0, 5.57188e-08, 0, -0.637349, 4.31281, 0.14274, -8.90292 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 6.39488e-14, 0, 1, 0, -6.39488e-14, 0, 1, -0.0866208, 0.860113, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 4.9738e-14, 0, 1, 0, -4.9738e-14, 0, 1, -0.164213, 2.31497, -0.844007 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 7.10543e-14, 0, 1, 0, -7.10543e-14, 0, 1, -0.164213, 2.31497, 0.920947 )
shape = SubResource( 2 )

[node name="OutsideTrigger" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="OutsideTrigger"]
transform = Transform( 1, 0, 1.06581e-13, 0, 1, 0, -1.06581e-13, 0, 1, 1.29279, 2.71933, -0.0100851 )
shape = SubResource( 3 )

[node name="InsideTrigger" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="InsideTrigger"]
transform = Transform( 1, 0, 1.42109e-13, 0, 1, 0, -1.42109e-13, 0, 1, -1.60117, 2.71933, -0.0100851 )
shape = SubResource( 3 )

[node name="Door" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="Airlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="WaitPos" type="Spatial" parent="."]
transform = Transform( 1, 0, 2.91323e-13, 0, 1, 0, -2.91323e-13, 0, 1, 0.0688996, 1.47631, -0.42548 )
[connection signal="body_entered" from="OutsideTrigger" to="." method="_on_OutsideTrigger_body_entered"]
[connection signal="body_exited" from="OutsideTrigger" to="." method="_on_OutsideTrigger_body_exited"]
[connection signal="body_entered" from="InsideTrigger" to="." method="_on_InsideTrigger_body_entered"]
[connection signal="body_exited" from="InsideTrigger" to="." method="_on_InsideTrigger_body_exited"]
[connection signal="finished" from="Airlock" to="." method="_on_Airlock_finished"]
